<resources>
    <string name="app_name">Vrundavan Solutions</string>
    <string name="logo">logo</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="password_text">Password</string>
    <string name="logintext">Login</string>
    <string name="dont_have_an_account">Dont have an account</string>
    <string name="sign_in_text">Sign in</string>
    <string name="_00000_00000">00000–00000</string>
    <string name="customer_name">Customer Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="enter_your_shop_name">Enter Your Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="contact_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="xyz_123">xyz@123</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="this_is_button">this is button</string>
    <string name="button">Button</string>
    <string name="profile">profile</string>
    <string name="cart">cart</string>
    <string name="bagira_logo">bagira_logo</string>
    <string name="haywards_logo">haywards_logo</string>
    <string name="gina_soda_logo">gina_soda_logo</string>
    <string name="paperboat_logo">paperboat_logo</string>
    <string name="smash_logo">smash_logo</string>
    <string name="bisleri_logo">bisleri_logo</string>
    <string name="paper_boat_tasty_apple_150ml">Paper Boat Tasty Apple (150ml)</string>
    <string name="mrp_10_10_x_54_pieces">MRP: ₹ 540 (10₹ X 54 Pieces)</string>
    <string name="_540">₹ 540</string>
    <string name="_470">₹ 470</string>
    <string name="retail_8_70_8_70_x_54_pieces">Retail: ₹ 470 (8.70₹ X 54 Pieces)</string>
    <string name="paperboat_apple">paperboat_apple</string>
    <string name="paper_boat_slurpy_mango_150ml">Paper Boat Slurpy Mango (150ml)</string>
    <string name="paperboat_guava">paperboat_guava</string>
    <string name="paper_boat_yummy_guava_150ml">Paper Boat Yummy Guava (150ml)</string>
    <string name="paperboat_mango">paperboat mango</string>
    <string name="paper_boat_lush_lychee_150ml">Paper Boat Lush Lychee (150ml)</string>
    <string name="paper_boat_mixed_fruit_150ml">Paper Boat Mixed Fruit (150ml)</string>
    <string name="paper_boat_pulpy_orange_150ml">Paper Boat Pulpy Orange (150ml)</string>
    <string name="black_bagiraa_200_ml">Black Bagiraa (200 mL)</string>
    <string name="retail_500_16_1_x_30_1_pieces">Retail: 500₹ (16.1₹ X 30 +1 Pieces)</string>
    <string name="mrp_600_20_x_30_pieces">MRP: 600₹ (20₹ X 30 Pieces)</string>
    <string name="black_bagira_can_250ml">Black Bagira Can (250mL)</string>
    <string name="black_bagira_can">black_bagira_can</string>
    <string name="mrp_1200_50_x_24_pieces">MRP: 1200 ₹ (50₹ X 24 Pieces)</string>
    <string name="mrp_984_41_x_24_pieces">MRP: 984 ₹ (41₹ X 24 Pieces)</string>
    <string name="black_bagira_water_200_ml">Black Bagira Water (200 mL)</string>
    <string name="retail_190_3_9_x_48_pieces">Retail: 190 ₹ (3.9 ₹ X 48 Pieces)</string>
    <string name="mrp_240_5_x_48_pieces">MRP: 240 ₹ (5 ₹ X 48 Pieces)</string>
    <string name="black_bagira_water_500_ml">Black Bagira Water (500 mL)</string>
    <string name="mrp_240_10_x_24_pieces">MRP: 240 ₹ (10 ₹ X 24 Pieces)</string>
    <string name="retail_140_5_8_x_24_pieces">Retail: 140₹ (5.8₹ X 24 Pieces)</string>
    <string name="black_bagira_water_1_l">Black Bagira Water (1 L)</string>
    <string name="mrp_240_10_x_12_pieces">MRP: 240 ₹ (10 ₹ X 12 Pieces)</string>
    <string name="retail_110_9_2_x_12_pieces">Retail: 110 ₹ (9.2 ₹ X 12 Pieces)</string>
    <string name="hawards_300ml">hawards_300ml</string>
    <string name="hawards_750ml" />
    <string name="haywards_5000_soda_300ml">Haywards 5000 Soda (300ml)</string>
    <string name="mrp_240_10_x_24_piece">MRP: 240 ₹ (10 ₹ X 24 Pieces)</string>
    <string name="retail_200_8_3_x_24_pieces">Retail: 200 ₹ (8.3 ₹ X 24 Pieces)</string>
    <string name="scheme_1_free_bagira_water_bottle_1_l">Scheme: 1 Free Bagira Water Bottle 1 L</string>
    <string name="haywards_5000_soda_750ml">Haywards 5000 Soda (750ml)</string>
    <string name="mrp_400_20_x_20_pieces">MRP: 400 ₹ (20 ₹ X 20 Pieces)</string>
    <string name="retail_280_14_x_20_pieces">Retail: 280 ₹ (14 ₹ X 20 Pieces)</string>
    <string name="gina_soda_jeera_200_ml">Gina Soda Jeera (200 mL)</string>
    <string name="mrp_300_10_x_30_pieces">MRP: 300 ₹ (10 ₹ X 30 Pieces)</string>
    <string name="mrp_255_8_5_x_30_pieces">MRP: 255 ₹ (8.5 ₹ X 30 Pieces)</string>
    <string name="retail_255_8_5_x_30_pieces">Retail: 255 ₹ (8.5 ₹ X 30 Pieces)</string>
    <string name="gina_soda_orange_200_ml">Gina Soda Orange (200 mL)</string>
    <string name="gina_soda_t2_sprite_200_ml">Gina Soda T2 Sprite (200 mL)</string>
    <string name="gina_soda_white_limca_200_ml">Gina Soda White Limca(200 mL)</string>
    <string name="enter_your_shop_address">Enter Your Shop Address</string>
    <string name="test">Test Crash</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_string">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="admin">Admin?</string>
    <string name="not_admin">Not Admin</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="loginadmin">Login Admin</string>
    <string name="login1">Login</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="plus_bagira_bottle">plus_bagira_bottle</string>
    <string name="minus_bagira_bottle">minus_bagira_bottle</string>
    <string name="show_bagira_can_red">show_bagira_can_red</string>
    <string name="minus_bagira_can_red">minus_bagira_can_red</string>
    <string name="plus_bagira_can_red">plus_bagira_can_red</string>
    <string name="_0">0</string>
    <string name="show_bagira_bottle">show bagira bottle</string>
    <string name="gina_soda_c_10_200_ml">Gina Soda C-10 (200 mL)</string>
    <string name="gina_soda_red_apple_200_ml">Gina Soda Red Apple (200 mL)</string>
    <string name="gina_soda_green_apple_200_ml">Gina Soda Green Apple (200 mL)</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="item">item</string>
    <string name="textview">TextView</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="sum_total">Sum Total</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total">Total</string>
    <string name="completed">Completed</string>
    <string name="current">Current</string>
</resources>