<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginpage">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="410dp"
        android:layout_height="98dp"
        android:layout_marginBottom="538dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/ePhoneNumber"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/ovalshape"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/ePassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/ovalshape"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_string"
        app:passwordToggleEnabled="true"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ePhoneNumber"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/eLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="#029EE3"
        android:text="@string/logintext"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ePassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/dont_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ePassword" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_text"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/remeber_me_chkb"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toTopOf="@+id/eLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ePassword" />

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eLogin"
        app:layout_constraintEnd_toEndOf="@+id/ePassword"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remeber_me_chkb"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_admin"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/eLogin"
        app:layout_constraintEnd_toEndOf="@+id/admin_panel_link"
        app:layout_constraintStart_toStartOf="@+id/admin_panel_link"
        app:layout_constraintTop_toBottomOf="@+id/admin_panel_link" />


</androidx.constraintlayout.widget.ConstraintLayout>

